--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "eslint-config-airbnb": "^19.0.4",
     "geist": "^1.3.0",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
@@ -39,6 +40,7 @@
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-next": "^14.2.4",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
