--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "geist": "^1.3.0",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
+    "open-graph-scraper": "^6.8.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
