--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@prisma/client": "^5.14.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
+    "@tanstack/react-query-devtools": "^5.59.16",
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "canvas-confetti": "^1.9.3",
     "eslint-config-airbnb": "^19.0.4",
     "geist": "^1.3.0",
     "next": "^14.2.4",
@@ -36,6 +38,7 @@
     "zod": "^3.23.3"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.6.4",
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
